Revelation changelog

---------------[ xxxx-xx-xx : 0.3.3 ]---------------

2004-08-10  Erik Grinaker <erikg@codepoet.no>

	* added an exception handler which displays a dialog with
	a tracebacck whenever an unhandled exception occurs

	* fixed a bug in the edit entry dialog which caused entry
	description to not be set


---------------[ 2004-08-09 : 0.3.2 ]---------------

2004-08-09  Erik Grinaker <erikg@codepoet.no>

	* don't try to load the removed druid module

	* bumped version number to 0.3.2


---------------[ 2004-08-08 : 0.3.1 ]---------------

2004-08-08  Erik Grinaker <erikg@codepoet.no>

	* merged the ui module into the widget module

	* fixed some bugs introduced during development

	* the window position is stored on quit

2004-08-07  Erik Grinaker <erikg@codepoet.no>

	* minor code cleanups

2004-08-06  Erik Grinaker <erikg@codepoet.no>

	* updated NEWS file

	* bumped version number to 0.3.1

2004-08-03  Erik Grinaker <erikg@codepoet.no>

	* the text entry in the find dialog is activated after
	the "No match found" dialog has been displayed

	* added import/export of GNOME Password Manager files

2004-08-02  Erik Grinaker <erikg@codepoet.no>

	* added access keys to popup menus

	* code cleanups

	* updated some of the text files

2004-07-29  Erik Grinaker <erikg@codepoet.no>

	* moved data about the current file into the EntryStore class

2004-07-28  Erik Grinaker <erikg@codepoet.no>

	* added various separate password dialogs, instead of
	using a common class

	* added generate_display_widget() and generate_edit_widget()
	methods to field objects

	* removed gconf schema registration from setup.py to
	make packing less painful - the schema is registered on
	app startup anyways

2004-07-27  Erik Grinaker <erikg@codepoet.no>

	* rewrote the app configuration handling

	* cleaned up the widget code, and added docstrings to all
	classes, methods and functions

	* the configuration is checked on startup, and if not found